# gallery-framework

./: .gitignore  CITATION  CMakeLists.txt  GNUmakefile  README  README.md
Makefile/: GNUmakefile.CORE  Makefile.Darwin  Makefile.Linux
UserDev/: CMakeLists.txt  GNUmakefile
UserDev/BasicTool/: GNUmakefile
UserDev/BasicTool/GeoAlgo/: GNUmakefile
UserDev/EventDisplay/: CMakeLists.txt  GNUmakefile  setup_evd.sh  test.py
UserDev/EventDisplay/3DViewer/: CMakeLists.txt  DrawMCShower3D.cxx  DrawMCShower3D.h  DrawMCTrack3D.cxx  DrawMCTrack3D.h  DrawOpflash3D.cxx  DrawOpflash3D.h  DrawPFParticle3D.cxx  DrawPFParticle3D.h  DrawSeed3D.cxx  DrawSeed3D.h  DrawShower3D.cxx  DrawShower3D.h  DrawSimChannel3D.cxx  DrawSimChannel3D.h  DrawSpacepoint3D.cxx  DrawSpacepoint3D.h  DrawTrack3D.cxx  DrawTrack3D.h  DrawVertex3D.cxx  DrawVertex3D.h  GNUmakefile  LinkDef.h
UserDev/EventDisplay/RawViewer/: CMakeLists.txt  DrawChannelROI.cxx  DrawChannelROI.h  DrawFEBData.cxx  DrawFEBData.h  DrawOpDetWaveform.cxx  DrawOpDetWaveform.h  DrawRawDigit.cxx  DrawRawDigit.cxx_nocompile  DrawRawDigit.h  DrawRawDigit.h_nocompile  DrawWire.cxx  DrawWire.h  GNUmakefile  LinkDef.h  RawBase.cxx  RawBase.h
UserDev/EventDisplay/RecoViewer/: CMakeLists.txt  DrawCluster.cxx  DrawCluster.h  DrawEndpoint.cxx  DrawEndpoint.h  DrawHit.cxx  DrawHit.h  DrawMCTrack.cxx  DrawMCTrack.h  DrawMCTruth.cxx  DrawMCTruth.h  DrawNumuSelection.cxx  DrawNumuSelection.h  DrawOpflash.cxx  DrawOpflash.h  DrawShower.cxx  DrawShower.h  DrawSpacepoint.cxx  DrawSpacepoint.h  DrawTrack.cxx  DrawTrack.h  DrawVertex.cxx  DrawVertex.h  EventDisplay_RecoViewerCint.cxx_tmp_31862  GNUmakefile  LinkDef.h  RecoBase.h
UserDev/EventDisplay/UbooneNoiseFilter/: ChirpFilter.cxx  CorrelatedNoiseFilter.cxx  CorrelatedNoiseFilter.h  GNUmakefile  LinkDef.h  NoiseFilterTypes.cxx  NoiseFilterTypes.h  UbooneNoiseFilter.cxx  UbooneNoiseFilter.h
UserDev/EventDisplay/python/: README  evd.py  evd3D.py  lariatdaq.py  tituslive.py
UserDev/EventDisplay/python/datatypes/: __init__.py  cluster.py  connectedObjects.py  database.py  drawableItems.py  empty.py  endpoint2d.py  febdata.py  hit.py  match.py  mcshower.py  mctrack.py  mctruth.py  numuselection.py  opdetwaveform.py  opflash.py  pfpart.py  seed.py  shower.py  simch.py  spacepoint.py  track.py  vertex.py  wire.py
UserDev/EventDisplay/python/evdmanager/: __init__.py  evdmanager.py  geometry.py  liveevdmanager.py  mapping.py
UserDev/EventDisplay/python/gui/: __init__.py  boxes.py  crtviewport.py  evdgui.py  evdgui3D.py  file_handler.py  gui.py  gui3D.py  livegui.py  optical_elements.py  opticalviewport.py  scolltest.py  shapes.py  viewport.py  viewport3D.py
UserDev/EventDisplay/python/pyqtgraph/exporters/: Exporter.py  ImageExporter.py  PrintExporter.py  SVGExporter.py
UserDev/EventDisplay/python/sbnd_commissioning/: __init__.py
UserDev/EventDisplay/python/sbnd_commissioning/modules/: __init__.py  sbnd_commissioning_module.py
UserDev/EventDisplay/python/titus/: __init__.py
UserDev/EventDisplay/python/titus/drawables/: __init__.py  cluster.py  connectedObjects.py  database.py  drawable.py  drawableItems.py  empty.py  endpoint2d.py  febdata.py  hit.py  match.py  mcshower.py  mctrack.py  mctruth.py  numuselection.py  opdetwaveform.py  opflash.py  pfpart.py  seed.py  shower.py  simch.py  spacepoint.py  track.py  vertex.py  wire.py
UserDev/EventDisplay/python/titus/gallery_interface/: __init__.py  event.py  gallery_interface.py  geometry.py  mapping.py
UserDev/EventDisplay/python/titus/gui/: __init__.py  crtviewport.py  evdgui.py  evdgui3D.py  file_handler.py  gui.py  gui3D.py  gui_old.py  livegui.py  optical_elements.py  viewport.py  viewport3D.py  widgets.py
UserDev/EventDisplay/python/titus/modules/: __init__.py  crt_module.py  geometry_module.py  help_module.py  larsoft_module.py  module.py  opdet_module.py  run_module.py  tpc_module.py  truthdumper_module.py  view_module.py
UserDev/RecoTool/: GNUmakefile
UserDev/RecoTool/ShowerReco/: GNUmakefile  LinkDef.h  SingleShowerQuality.cxx  SingleShowerQuality.h  runSingleShowerQuality.py
UserDev/SuperaLight/: GNUmakefile  supera_dune.py  supera_pd.py  supera_sbnd.py
UserDev/SuperaLight/proto_dune_readers/: GNUmakefile  LinkDef.h  pd_module_base.cxx  pd_module_base.h  pd_supera_light.cxx  pd_supera_light.h  pd_wire.cxx  pd_wire.h
UserDev/SuperaLight/readers/: .depend  GNUmakefile  LinkDef.h  compile_exec.sh  dune_cluster.cxx  dune_cluster.h  dune_neutrino.cxx  dune_neutrino.h  dune_rawdigit.cxx  dune_rawdigit.h  dune_wire.cxx  dune_wire.h  sbnd_cluster.cxx  sbnd_cluster.h  sbnd_neutrino.cxx  sbnd_neutrino.h  sbnd_rawdigit.cxx  sbnd_rawdigit.h  (+8 more)
UserDev/example/: GNUmakefile  LinkDef.h  example_ana.cxx  example_ana.h  processFile.py
UserDev/nue_xsec/: .depend  GNUmakefile  LinkDef.h  Stage1Efficiency.cxx  Stage1Efficiency.h  analyze_eff_stage1.py  argoneut_electrons_nuexsecanalysisCint.cxx  processFiles.py
config/: setup.sh  setup_evd.sh
core/: CMakeLists.txt  GNUmakefile  test.py
core/Analysis/: .depend  CMakeLists.txt  GNUmakefile  LinkDef.h  ana_base.cxx  ana_base.h  ana_processor.cxx  ana_processor.h  gallery_framework_AnalysisDict.cxx
core/Base/: .depend  AnalysisConstants.h  CMakeLists.txt  DetectorStatusTypes.h  FrameworkConstants.h  GNUmakefile  GeoConstants.h  GeoTypes.h  LinkDef.h  MCConstants.h  RawConstants.h  gallery_framework_BaseDict.cxx  messenger.cxx  messenger.h
core/LArUtil/: .depend  CMakeLists.txt  ClockConstants.h  DetectorProperties.cxx  DetectorProperties.h  ElecClock.cxx  ElecClock.h  GNUmakefile  Geometry.cxx  Geometry.h  GeometryHelper.cxx  GeometryHelper.h  InvalidWireError.cxx  InvalidWireError.h  LArProperties.cxx  LArProperties.h  LArUtilBase.cxx  LArUtilBase.h  LArUtilConfig.cxx  LArUtilConfig.h  LArUtilConstants.h  LArUtilManager.cxx  LArUtilManager.h  LArUtilServicesHandler.cxx  LArUtilServicesHandler.h  LinkDef.h  PxUtils.h  SimpleGeometryHelper.cxx  SimpleGeometryHelper.h  TimeService.cxx  TimeService.h  gallery_framework_LArUtilDict.cxx
core/LArUtil/dat/: larutil_sbnd.root  services_sbnd.fcl
(+3 files in other folders)
